# nearest-advocate

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/BreathRateData/: P04_Reference_FlowReversals_OVERALL.csv  P04_SportsSRS_FlowReversals_OVERALL.csv  P05_Reference_FlowReversals_OVERALL.csv  P05_SportsSRS_FlowReversals_OVERALL.csv  P06_Reference_FlowReversals_OVERALL.csv  P06_SportsSRS_FlowReversals_OVERALL.csv  P07_Reference_FlowReversals_OVERALL.csv  P07_SportsSRS_FlowReversals_OVERALL.csv  P08_Reference_FlowReversals_OVERALL.csv  (+29 more)
experiments/: NAd_clock_drift_correction.ipynb  NAd_plot_characteristic.ipynb  NAd_tests_realdata.ipynb  NAd_tests_realdata_clock_drift.ipynb  NAd_tests_semisimulated.ipynb  TimeDelays_BreathRate.csv  TimeDelays_Strides.csv  config.py  data_exploration.ipynb  data_loader.py  method_comparision_real.ipynb  method_comparision_semisimulated-Copy1.ipynb  method_comparision_semisimulated-Copy2.ipynb  method_comparision_semisimulated-Copy3.ipynb  method_comparision_semisimulated.ipynb  methods.py  metric_proof_simulation.ipynb  utils.py
scipydev/: README.md
src/: __init__.py  _nearest_advocate_cython_util.pyx  _nearest_advocate_util.pyx  nearest_advocate.py  nearest_advocate_c.html  nearest_advocate_c.py  nearest_advocate_c.pyx  nearest_advocate_cython.py  nearest_advocate_nb.py  nearest_advocate_numba.py  nearest_advocate_pseudocode.py  nearest_advocate_python.py  run.py  setup.py  tester.py  tester_search.py  tester_single.py
tests/: test_algorithm.py  test_performances.py  test_search.py  tester_single.py
(+110 files in other folders)
